<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.redes.figuras.Rectangulo1">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:context="com.example.redes.figuras.Triangulo1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rectangulo"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Digite la Base y Altura (Mts)"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txtBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/base"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/txtAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/altura"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="366dp"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:onClick="Calcular1"
                android:text="@string/calcular" />

            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:onClick="Limpiar1"
                android:text="@string/limpiar" />
            <Button
                android:id="@+id/btnRegresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Regresar"
                android:text="@string/regresar" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
