<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.example.redes.figuras.Cilindro"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cilindro"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

<TextView
    android:id="@+id/textView19"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Digite Radio y Altura (Mts)"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

<TextView
    android:id="@+id/textView17"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtRadioCi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/radio"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/txtAlturaCi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/altura"
        android:inputType="numberDecimal" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnCalcularCi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="CalcularCi"
        android:text="@string/calcular" />

    <Button
        android:id="@+id/btnLimpiarCi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="LimpiarCi"
        android:text="@string/limpiar" />

</LinearLayout>
</LinearLayout>
