<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="374dp"
        android:layout_height="511dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context="com.example.redes.figuras.Circulo"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Circulo"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="127dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Digite el Radio (Mts)"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtRadio"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/radio"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="70dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcularCir"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="CalcularCir"
            android:text="@string/calcular"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="126dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Limpiar"
            android:text="@string/limpiar" />

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Regresar"
            android:text="@string/regresar" />

    </LinearLayout>

</LinearLayout>

