<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.example.redes.figuras.Esfera"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Esfera"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

<TextView
    android:id="@+id/textView22"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Digite Radio (Mts)"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

<TextView
    android:id="@+id/textView24"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtRadioEs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/radio"
        android:inputType="numberDecimal" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnCalcularEs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="CalcularEs"
        android:text="@string/calcular" />

    <Button
        android:id="@+id/btnLimpiarEs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="Limpiar"
        android:text="@string/limpiar" />
</LinearLayout>
</LinearLayout>